master - fixed scrollbars issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,6 @@
  *= require_self
  */
 
-body { margin: 0; }
+body { margin: 0; overflow: hidden; }
 canvas { width: 100%; height: 100% }
 
